# benchmark_set

./: .dockerignore  README.md  iterate_ckpts.py  pyproject.toml
k8s/: Dockerfile  README.md  build_bench_image.py
prog_repair_bench/: __init__.py  __main__.py  copy_resources.py  run_item.py  run_multiturn_inference.py  serve_vllm.py  submit_k8s_job.py  test_runner.py  test_runner_api.py  wandb_plots.py
prog_repair_bench/bench_runners/: __init__.py  base_langgraph.py  completion_langgraph.py  method_gen_multiturn_langgraph.py  program_repair_langgraph.py
prog_repair_bench/data_preprocess/: __init__.py  class_task_processor.py  completion_dataset.py  hf_dataset_loader.py  s3_folders_manager.py
prog_repair_bench/processors/: __init__.py  code_block_processing.py  config_merger.py  cut_file.py  output_reader.py  parse_tests_output.py  parse_tests_output_sympy.py  process_results.py  prompt_builder.py
prog_repair_bench/resources/: config.yaml  config_default.yaml  config_k8s.yaml  config_k8s_gke.yaml  dockerfile_commands_django  dockerfile_commands_sympy  image_tag.txt  job_template.yaml  job_template_gke.yaml  prompts_completion.yaml  prompts_method_gen_multiturn_class.yaml  prompts_method_gen_multiturn_method.yaml  prompts_program_repair_null.yaml  prompts_program_repair_test.yaml
prog_repair_bench/sandbox_api/: Dockerfile  README.md  api.py  build_sandbox.py  build_sandbox_api_image.py  run_api.py  sandbox-api.yaml  sandbox-images-sympy.yaml  submit_service.py
